Importing dapp-styles

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,6 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
-    <script src="/vendor.bundle.js"></script>
-    <script src="/bundle.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
