--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,6 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
