Web3 forwarder PoC

--- a/client/dapp.html
+++ b/client/dapp.html
@@ -6,6 +6,11 @@
     <title>Awesome dapp</title>
   </head>
   <body>
-    Imma awesome dapp
+    <h1>Welcome to dapp</h1>
+    <h2>
+      Your accounts:
+      <pre id="accounts">...</pre>
+    </h2>
+    <script src="./dapp.js"></script>
   </body>
 </html>
