Full width fields

--- a/client/dapp.html
+++ b/client/dapp.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <title>Awesome dapp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <style>
+      label {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -12,7 +17,7 @@
       <div class="row">
       <div class="col-sm-6 col-sm-push-6">
         <h4>
-          Your accounts
+          Your account
         </h4>
         <pre id="accounts">...</pre>
       </div>
