--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Node Management</title>
+    <script src="/parity-utils/inject.js"></script>
   </head>
   <body>
     <div id="root"></div>
