--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Parity System UI</title>
+    <title>Parity Signer UI</title>
   </head>
   <body>
     <div id="root"></div>
