--- a/dev/window.html
+++ b/dev/window.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>Redux TodoMVC Example (Window)</title></head><body><div id="root"></div><script src="http://localhost:3030/js/App.bundle.js"></script></body></html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width"><title>Parity Signer UI</title></head><body><div id="root"></div><script src="http://localhost:3030/js/App.bundle.js"></script></body></html>
