--- a/client/transfer.html
+++ b/client/transfer.html
@@ -50,6 +50,17 @@
                 />
             </label>
           </div>
+          <div class="form-group">
+            <label class="form-label">
+            Data
+              <input
+                class="form-control"
+                placeholder="0x..."
+                type="text"
+                id="data"
+                />
+            </label>
+          </div>
           <pre id="summary">
 You will transfer <strong>0.1ETH</strong>
 from <strong>0x...</strong>
