--- a/home/web/client/index.html
+++ b/home/web/client/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="home"></div>
-    <script src="./index.js"></script>
+    <script src="./home.js"></script>
   </body>
 </html>
