--- a/signer/web/app/index.html
+++ b/signer/web/app/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./app.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
