(extension): rename App -> app

--- a/extension/chrome/extension/app.html
+++ b/extension/chrome/extension/app.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Parity Ethereum Integration [APP]</title>
-    <script src="./App.js"></script>
+    <script src="./app.js"></script>
     <div id='root'>Loading ...</div>
   </head>
   <body>
