--- a/home/web/client/index.html
+++ b/home/web/client/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Parity Home</title>
     <script src="./inject.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div id="home"></div>
