inline componnent attachment root style

--- a/home/web/client/index.html
+++ b/home/web/client/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Parity Home</title>
     <script src="./inject.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <div id="home"></div>
+    <div id="home" style="height:100%"></div>
     <script src="./home.js"></script>
   </body>
 </html>
