--- a/home/src/web/index.html
+++ b/home/src/web/index.html
@@ -7,7 +7,7 @@
     <title>Parity Home</title>
     <script src="./inject.js"></script>
   </head>
-  <body>
+  <body class="reset">
     <div id="home"></div>
     <script src="./home.js"></script>
   </body>
